--- a/src/InsightBytes/Views/SettingsControl.axaml
+++ b/src/InsightBytes/Views/SettingsControl.axaml
@@ -26,7 +26,7 @@
                            RenderOptions.BitmapInterpolationMode="HighQuality"/>
 
 					<StackPanel Spacing="0" Margin="12 0">
-						<TextBlock Text="InsightBytes"
+						<TextBlock Text="Insight Bytes"
                                    Theme="{StaticResource TitleTextBlockStyle}" />
 
 						<TextBlock Text="{Binding CurrentVersion}"
@@ -36,7 +36,7 @@
                                    Theme="{StaticResource CaptionTextBlockStyle}" />
 
 						<TextBlock Theme="{StaticResource CaptionTextBlockStyle}"
-                                   Text="http://github.com/amwx/FluentAvalonia"
+                                   Text="https://github.com/gccornejo441/InsightBytes"
                                    Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
 					</StackPanel>
 				</DockPanel>
