--- a/src/InsightBytes/Views/ChatControl.axaml
+++ b/src/InsightBytes/Views/ChatControl.axaml
@@ -8,7 +8,5 @@
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
-	<webview:WebView
-		
-		x:Name="webview" Address="http://localhost:8085/" />
+	<webview:WebView x:Name="webview" Address="http://localhost:8085/" />
 </UserControl>
