--- a/src/InsightBytes/App.axaml
+++ b/src/InsightBytes/App.axaml
@@ -25,6 +25,7 @@
 
 	<Application.Styles>
 		<sty:FluentAvaloniaTheme PreferSystemTheme="False" PreferUserAccentColor="True" />
+		<StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml"/>
 		<StyleInclude Source="/Styles/ProgressBar.axaml" />
 		<StyleInclude Source="/Styles/CustomTheme.axaml" />
 	</Application.Styles>
